--- a/.github/workflows/auto_test.yml
+++ b/.github/workflows/auto_test.yml
@@ -23,14 +23,13 @@ jobs:
               ifcore: 'core/**'
               ifandroid: 'android/**'
       - name: Gradle Test Core
-        if: ${{ needs.paths-filter.outputs.ifcore == 'true' }}
+        if: ${{ steps.filter.outputs.ifcore == 'true' }}
         uses: gradle/gradle-build-action@v2.4.2
         with:
           gradle-version: 8.4
           arguments: :core:test
-
       - name: Gradle Test Android
-        if: ${{ needs.paths-filter.outputs.ifandroid == 'true' }}
+        if: ${{ steps.filter.outputs.ifandroid == 'true' }}
         uses: gradle/gradle-build-action@v2.4.2
         with:
           gradle-version: 8.4
