--- a/.github/workflows/auto_test.yml
+++ b/.github/workflows/auto_test.yml
@@ -14,21 +14,22 @@ jobs:
         uses: actions/checkout@v3.5.2
       - name: Filter Changes
         uses: dorny/paths-filter@v2
-        id: filter
+        id: changes
         with:
+          base: ${{ github.ref }}
           filters: |
             ifcore:
               - 'core/**'
             ifandroid:
               - 'android/**'
       - name: Gradle Test Core
-        if: steps.filter.outputs.ifcore == 'true'
+        if: steps.changes.outputs.ifcore == 'true'
         uses: gradle/gradle-build-action@v2.4.2
         with:
           gradle-version: 8.4
           arguments: :core:test
       - name: Gradle Test Android
-        if: steps.filter.outputs.ifandroid == 'true'
+        if: steps.changes.outputs.ifandroid == 'true'
         uses: gradle/gradle-build-action@v2.4.2
         with:
           gradle-version: 8.4
