--- a/.github/workflows/auto_test.yml
+++ b/.github/workflows/auto_test.yml
@@ -39,4 +39,4 @@ jobs:
         uses: actions/upload-artifact@v3.1.2
         with:
           name: APK
-          path: ${{ github.workspace }}/android/build/outputs/apk/release/android-${{ inputs.build_type }}.apk
+          path: ${{ github.workspace }}/android/build/outputs/apk/release/android-release.apk
