--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     
-    <!--<uses-permission android:name="android.permission.FOREGROUND_SERVICE"/> !-->
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
 
     <application
+        android:name=".MainApplication"
         android:icon="@mipmap/ic_launcher"
         android:allowBackup="true"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -29,6 +31,7 @@
         <service
             android:name=".MinerService"
             android:enabled="true"
+            android:foregroundServiceType="dataSync"
             android:exported="false">
         </service>
     </application>
