--- a/.github/workflows/auto_test.yml
+++ b/.github/workflows/auto_test.yml
@@ -11,45 +11,114 @@ permissions:
   contents: write
 
 jobs:
-  test:
+  check-changes:
     runs-on: ubuntu-latest
+    outputs:
+      core: ${{ steps.changes.outputs.core }}
+      android: ${{ steps.changes.outputs.android }}
     steps:
-      - uses: actions/checkout@v4.1.1
-      - uses: dorny/paths-filter@v3.0.1
+      - name: Checkout
+        uses: actions/checkout@v4.1.1
+
+      - name: File Check
+        uses: dorny/paths-filter@v3.0.1
         id: changes
         with:
           filters: |
-            ifcore:
+            core:
               - 'core/**'
-            ifandroid:
+            android:
               - 'android/**'
 
-      - uses: actions/setup-java@v4.2.1
+  core-test:
+    runs-on: ubuntu-latest
+    needs: check-changes
+    if: ${{ needs.check-changes.outputs.core == 'true' }}
+    steps:
+
+      - name: Checkout
+        uses: actions/checkout@v4.1.1
+
+      - name: Check Changes
+        uses: dorny/paths-filter@v3.0.1
+        id: changes
         with:
-          java-version: '17'
+          list-files: shell
+          filters: |
+            core-src:
+              - added|modified: 'core/**/*.cpp'
+              - added|modified: 'core/**/*.hpp'
+
+      - name: Format Code C++
+        if: ${{ steps.changes.outputs.core-src == 'true' }}
+        run: |
+          git config --global user.email "ikomangwidiadaariasa12@gmail.com"
+          git config --global user.name "AriasaProp"
+          sudo apt-get install -y clang-format
+          echo ${{ steps.changes.outputs.core-src }} | xargs -n 1 clang-format -i
+          git add .
+          git commit -m "Core Reformatting Sources"
+
+      - name: Publish in github
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Setup Java 21
+        uses: actions/setup-java@v4.2.1
+        with:
+          java-version: '21'
           distribution: 'temurin'
           cache: 'gradle'
 
-      - uses: gradle/actions/setup-gradle@v3
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
         with:
           gradle-version: 8.7
 
       - name: Core Check
-        if: steps.changes.outputs.ifcore == 'true'
         run: gradle :core:check
 
+  android-build:
+    runs-on: ubuntu-latest
+    needs: [check-changes, core-test]
+    if: ${{ (needs.check-changes.outputs.android == 'true') && ((needs.check-changes.outputs.core == 'false') || success()) }}
+    steps:
+
+      - name: Checkout
+        uses: actions/checkout@v4.1.1
+
+      - name: Check Changes
+        uses: dorny/paths-filter@v3.0.1
+        id: changes
+        with:
+          filters: |
+            android-java:
+              - added|modified: 'android/src/**/*.java'
+
+      - name: Setup Java 21
+        uses: actions/setup-java@v4.2.1
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: 'gradle'
+
       - name: Format Java Code
+      	if: ${{ steps.changes.outputs.android-java == 'true' }}
         uses: axel-op/googlejavaformat-action@v3.6.0
         with:
           files: "android/src/**/*.java"
           args: "-r -a"
 
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+        with:
+          gradle-version: 8.7
+
       - name: Android Build
-        if: steps.changes.outputs.ifandroid == 'true'
         run: gradle :android:build -Prelease
 
-      - name: Upload Android
-        if: steps.changes.outputs.ifandroid == 'true'
+      - name: Upload Android Artifacts
         uses: actions/upload-artifact@v4.3.3
         with:
           name: APK
