--- a/android/src/main/cpp/CMakeLists.txt
+++ b/android/src/main/cpp/CMakeLists.txt
@@ -3,11 +3,11 @@ cmake_minimum_required(VERSION 3.10.2)
 project(ext LANGUAGES CXX)
 
 set(CMAKE_BUILD_TYPE Release)
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSION OFF)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Wall -Wextra -Werror -fexceptions -frtti")
+set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra -Werror -fexceptions -frtti")
 
 set(CORE_SRC "../../../../core/main")
 file(GLOB_RECURSE Include_subDir LIST_DIRECTORIES true ${CORE_SRC})
